update some buttons

--- a/static/css/payroll.css
+++ b/static/css/payroll.css
@@ -1,13 +1,13 @@
 /* PAYROLL*/
-#payroll {
-  background-image: url("payroll/static/assets/img/search.png"); /* Add a search icon to input */
-  background-repeat: no-repeat; /* Do not repeat the icon image */
-  width: 30rem; /* Full-width */
+/* #payroll {
+  background-image: url("payroll/static/assets/img/search.png");
+  background-repeat: no-repeat;
+  width: 30rem;
   height: 20px;
-  font-size: 16px; /* Increase font-size */
-  padding: 12px 20px 12px 40px; /* Add some padding */
-  margin-bottom: 12px; /* Add some space below the input */
-}
+  font-size: 16px;
+  padding: 12px 20px 12px 40px;
+  margin-bottom: 12px;
+} */
 
 .pr-table {
   border-collapse: collapse; /* Collapse borders */
@@ -32,7 +32,8 @@
 
 .pr {
   width: 100%;
-  height: 5%;
+  height: 70px;
+  padding-bottom: 1rem;
   display: flex;
   justify-content: space-between;
   position: relative;
