--- a/templates/base.html
+++ b/templates/base.html
@@ -35,8 +35,8 @@
     <div class="wrapper1">
       <nav class="nav-main">
         <div class="nav-user tertiary">
-          <p>Welcome, <span class="name"></span></p>
-          <p class="date"></p>
+          <p class="p2">Welcome, <span class="name"></span></p>
+          <p class="date p2"></p>
         </div>
         <div class="nav-profile">
           <div class="profile">
