--- a/templates/employee-list.html
+++ b/templates/employee-list.html
@@ -6,9 +6,9 @@
 <main class="emplist-container">
   <div class="emplist">
     <h1>Employee List</h1>  
-    <button id="add-emp">Add Employee</button>
+    <button class="btn4 xs" id="add-emp">Add Employee</button>
       <div>
-        <input type="text" id="employeeList" onkeyup="employeeFunction()" placeholder="Search for Employee Name..">
+        <input type="text" class="search-bar" id="employeeList" onkeyup="employeeFunction()" placeholder="Search for Employee Name..">
       </div>
   </div>
   <div class="emplist-wrapper">
