--- a/templates/payroll.html
+++ b/templates/payroll.html
@@ -6,7 +6,7 @@
 <main class="pr-container">
   <div class="pr">
     <h1>Payroll</h1>
-    <input type="text" id="payroll" onkeyup="payrollFunction()"  placeholder="Search for Employee Name..">
+    <input type="text" class="search-bar" id="payroll" onkeyup="payrollFunction()"  placeholder="Search for Employee Name..">
   </div>
   <div class="pr-wrapper">
     <div class="pr-box1">
