--- a/templates/time-sheet.html
+++ b/templates/time-sheet.html
@@ -6,7 +6,7 @@
 <main class="ts-container">
   <div class="ts">
     <h1>Time Sheet</h1>
-    <input type="text" id="employee-timesheet" onkeyup="timesheetfunction()" placeholder="Search for names..">
+    <input type="text" class="search-bar" id="employee-timesheet" onkeyup="timesheetfunction()" placeholder="Search for names..">
   </div>
   <div class="ts-wrapper">
     <div class="ts-box1">
