--- a/static/css/employee-list.css
+++ b/static/css/employee-list.css
@@ -1,12 +1,12 @@
 /* EMPLOYEE LIST */
-#employeeList {
+/* #employeeList {
   background-image: url('/static/assets/img/search.png');
-  width: 30rem; /* Full-width */
+  width: 30rem;
   height: 20px;
-  font-size: 16px; /* Increase font-size */
-  padding: 12px 20px 12px 40px; /* Add some padding */
-  margin-bottom: 12px; /* Add some space below the input */
-}
+  font-size: 16px;
+  padding: 12px 20px 12px 40px;
+  margin-bottom: 12px;
+} */
 
 #employee-table {
   border-collapse: collapse; /* Collapse borders */
@@ -37,13 +37,13 @@
   position: relative;
 }
 
-#add-emp {
+/* #add-emp {
   padding: 2px;
   background-color: green;
   height: 30px;
   margin-bottom: 12px;
   color: #ddd;
-}
+} */
 
 .emplist-wrapper {
   width: 100%;
