--- a/static/css/style.css
+++ b/static/css/style.css
@@ -466,13 +466,28 @@
 
 /* LOGIN */
 
-.fixer {
-  width: 100%;
-  height: 90vh;
-  overflow-y: scroll;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 20px;
-  padding: 1rem;
+.btn4 {
+  padding: 0.45rem 1rem;
+  cursor: pointer;
+  font-weight: 300;
+  background-color: var(--good);
+  color: var(--white);
+  box-shadow: var(--shadow);
+}
+
+.btn4:hover {
+  background-color: var(--goodHover);
+  color: var(--secondaryDark);
+}
+
+.xs {
+  height: 2rem;
+  width: 8rem;
+}
+
+.search-bar {
+  padding: 0.5rem;
+  width: 30rem;
+  border-radius: 5px;
+  box-shadow: var(--shadow);
 }
