--- a/templates/employee-list.html
+++ b/templates/employee-list.html
@@ -25,7 +25,7 @@
         {{range .Employee}}
         <tr class="employee-content">
           <td><input class="select" type="checkbox" value="Edit"></td>
-          <td>{{.ID}}</td>
+          <td>{{.IdNumber}}</td>
           <td>{{.LastName}}, {{.FirstName}}</td>
           <td>{{.Company.Worksite}}</td>
           <td>{{.Department.Name}}</td>
@@ -85,7 +85,15 @@
         </div>
         <div class="empModal-form">
           <label for="marital">Marital Status:</label>
-          <input type="text" id="marital" name="marital" >
+          <select id="marital" name="marital" required>
+              <option value="0">Select Status</option>
+              <option value="1">Single</option>
+              <option value="2">Married</option>
+              <option value="3">Widowed</option>
+              <option value="4">Seperated</option>
+             
+
+            </select>
         </div>
       </div>    
       <div class="gov-id">
@@ -114,15 +122,9 @@
             <label for="department">Department:</label>
             <select id="department" name="department" required>
                 <option value="">Select Department</option>
-                <option value="Admin">Admin</option>
-                <option value="Cafe">Cafe</option>
-                <option value="Hardware Development">Hardware Development</option>
-                <option value="HR">HR</option>
-                <option value="Hotel">Hotel</option>
-                <option value="IT">IT</option>
-                <option value="Operations">Operations</option>
-                <option value="Software Development">Software Development</option> 
-                <option value="Tele">Tele</option>                     
+                {{range .Department}}
+                  <option value="{{.ID}}">{{.Name}}</option>
+                {{end}}
             </select>
         </div>
         <div class="empModal-form">
@@ -131,11 +133,24 @@
         </div>
         <div class="empModal-form">
           <label for="supervisor">Supervisor:</label>
-          <input type="text" id="supervisor" name="supervisor" required>
+            <select id="supervisor" name="supervisor" required>
+              <option value="0">Select Supervisor</option>
+              {{range .Employee}}
+                {{if eq .Supervisor true}}
+                <option value="{{.ID}}">{{.LastName}}, {{.FirstName}} -- {{.Department.Name}}</option>
+                {{end}}
+              {{end}}
+            </select>
         </div>
         <div class="empModal-form">
             <label for="position">Position:</label>
-            <input type="text" id="position" name="position" required>
+            <select id="position" name="position" required>
+              <option value="0">Select Position</option>
+
+                 
+                <option value="1">test static</option>
+
+            </select>
         </div>
         <div class="empModal-form">
             <label for="salary">Salary:</label>
