--- a/templates/base.html
+++ b/templates/base.html
@@ -40,7 +40,7 @@
         </div>
         <div class="nav-profile">
           <div class="profile">
-            <img src="/static/assets/img/no-profile.png">
+            <img id="main-profile" src="/static/assets/img/no-profile.png">
           </div>
 
           <div class="modal">
