--- a/templates/employee-list.html
+++ b/templates/employee-list.html
@@ -187,24 +187,131 @@
           <div class="buttons">
             <button type="button" id="prevBtn" onclick="nextPrev(-1)">Previous</button>
             <button type="button" id="nextBtn" onclick="nextPrev(1)">Next</button>
-          </div>  
-          
+          </div>    
     </form>
     </div>
   </div>
-  <div id="modal1" class="modal1">
 
+
+
+
+
+  <div id="modal1" class="modal1">
     <div class="modal-content1">
       <span class="close1">&times;</span>
       <p>Edit page</p>
     </div>
   </div>
-  <div id="modal2" class="modal2">
 
-    <div class="modal-content2">
+
+
+
+
+  <div id="modal2" class="modal2">
+    <div class="modal-content2">  
       <span class="close2">&times;</span>
-      <p id="detail"></p>
-    </div>
+
+      <h2 id="pi">Personal Information</h2>
+      <div class="perDetail-info">
+        <div class="empDetail-form">
+            <label for="lname">Last Name:</label>
+            <p></p>
+        </div>
+        <div class="empDetail-form">
+            <label id="fname" for="fname">First Name:</label>
+            <p></p>
+        </div>
+        <div class="empDetail-form">
+            <label for="mname">Middle Name:</label>
+            <p></p>
+        </div>
+        <div class="empDetail-form">
+            <label for="sname">Suffix Name:</label>
+            <p></p>
+        </div>
+        <div class="empDetail-form">
+            <label for="email">Email:</label>
+            <p></p>
+        </div>
+        <div class="empDetail-form">
+            <label for="phone">Phone:</label>
+            <p></p>
+        </div>
+        <div class="empDetail-form"> 
+            <label for="address">Address:</label>
+            <p></p>
+        </div>
+        <div class="empDetail-form">
+          <label for="birthDate">Birthday:</label>
+          <p></p>
+        </div>
+        <div class="empDetail-form">
+          <label for="marital">Marital Status:</label>
+          <p></p>
+        </div>
+      </div>    
+      <div class="govDetail-id">
+        <div class="empDetail-form">
+          <label for="sss">SSS:</label>
+          <p></p>
+        </div>
+        <div class="empDetail-form">
+          <label for="philhealth">PhilHealth:</label>
+          <p></p>
+        </div>
+        <div class="empDetail-form">
+          <label for="pagibig">Pag-Ibig:</label>
+          <p></p>
+        </div>
+        <div class="empDetail-form">
+          <label for="tin">Tin ID:</label>
+          <p></p>
+        </div>
+      </div>
+
+      <h2 id="ji">Job Information</h2>
+      <div class="jobDetail-info">
+        <div class="empDetail-form">
+            <label for="department">Department:</label>
+            <p></p>
+        </div>
+        <div class="empDetail-form">
+          <label for="branch">Branch:</label>
+          <p></p>
+        </div>
+        <div class="empDetail-form">
+          <label for="supervisor">Supervisor:</label>
+            <p></p>
+        </div>
+        <div class="empDetail-form">
+            <label for="position">Position:</label>
+            <p></p>
+        </div>
+        <div class="empDetail-form">
+            <label for="salary">Salary:</label>
+           <p></p>
+        </div>
+        <div class="empDetail-form">
+            <label for="startDate">Start Date:</label>
+            <p></p>
+        </div>
+      </div>
+
+      <h2 id="ECI">Emergency Contact Information</h2>
+      <div class="emergDetail-info">
+        <div class="empDetail-form">
+          <label for="contactname">Full Name:</label>
+          <p></p>
+        </div>
+        <div class="empDetail-form">
+          <label for="contactphone">Phone Number:</label>
+          <p></p>
+        </div>
+        <div class="empDetail-form">
+          <label for="relationship">Relationship</label>
+          <p></p>
+        </div>
+      </div>
   </div>
 </div>
 </main>
