--- a/templates/employee-list.html
+++ b/templates/employee-list.html
@@ -7,9 +7,10 @@
   <div class="emplist">
     <h1>Employee List</h1>  
     <button class="btn4 xs" id="add-emp">Add Employee</button>
-      <div>
+    <form class="delete-employee" action=""><input type="submit" value="Delete Employee"></form>
+    <div>
         <input type="text" class="search-bar" id="employeeList" onkeyup="employeeFunction()" placeholder="Search for Employee Name..">
-      </div>
+    </div>
   </div>
   <div class="emplist-wrapper">
     <div class="emplist-box1">
