--- a/templates/employee-list.html
+++ b/templates/employee-list.html
@@ -19,7 +19,7 @@
           <th><input class="selectAll"  type="checkbox"></th>
           <th>ID</th>
           <th>Employee Name</th>
-          <th>Company</th>
+          <th>Worksite</th>
           <th>Department</th>
           <th>Contact</th>
         </tr>
@@ -27,7 +27,7 @@
         <tr class="employee-content">
           <td><input class="select" type="checkbox" value="Edit"></td>
           <td>{{.IdNumber}}</td>
-          <td class="employee-name">{{.LastName}}, {{.FirstName}}</td>
+          <td class="employee-name">{{.LastName}}, {{.FirstName}} </td>
           <td>{{.Company.Worksite}}</td>
           <td>{{.Department.Name}}</td>
           <td>{{.ContactNumber}}</td>
@@ -88,7 +88,7 @@
         </div>
         <div class="empModal-form">
           <label for="marital">Marital Status:</label>
-          <select id="marital" name="marital" required>
+          <select id="marital" name="marital" >
               <option value="0">Select Status</option>
               <option value="1">Single</option>
               <option value="2">Married</option>
@@ -121,8 +121,17 @@
       <div class="tab">
       <h2 id="ji">Job Information</h2>
         <div class="empModal-form">
+          <label for="worksite">Worksite:</label>
+          <select id="worksite" name="worksite" >
+               <option value="">Select Worksite</option>
+              {{range .Worksite}}
+                <option value="{{.ID}}">{{.Worksite}}</option>
+              {{end}}
+          </select>
+        </div>
+        <div class="empModal-form">
             <label for="department">Department:</label>
-            <select id="department" name="department" required>
+            <select id="department" name="department" >
                 <option value="">Select Department</option>
                 {{range .Department}}
                   <option value="{{.ID}}">{{.Name}}</option>
@@ -131,11 +140,11 @@
         </div>
         <div class="empModal-form">
           <label for="branch">Branch:</label>
-          <input type="text" id="branch" name="branch" required>
+          <input type="text" id="branch" name="branch" >
         </div>
         <div class="empModal-form">
           <label for="supervisor">Supervisor:</label>
-            <select id="supervisor" name="supervisor" required>
+            <select id="supervisor" name="supervisor" >
               <option value="0">Select Supervisor</option>
               {{range .Employee}}
                 {{if eq .Supervisor true}}
@@ -155,11 +164,11 @@
         </div>
         <div class="empModal-form">
             <label for="salary">Salary:</label>
-            <input type="number" id="salary" name="salary" placeholder="₱" required>
+            <input type="number" id="salary" name="salary" placeholder="₱" >
         </div>
         <div class="empModal-form">
             <label for="startDate">Start Date:</label>
-            <input type="date" id="startDate" name="startDate" required>
+            <input type="date" id="startDate" name="startDate" >
         </div>
       </div>
       
@@ -167,21 +176,21 @@
       <h2 id="ECI">Emergency Contact Information</h2>
         <div class="empModal-form">
           <label for="contactname">Full Name:</label>
-          <input type="text" id="contactname" name="contactname" required>
+          <input type="text" id="contactname" name="contactname" >
         </div>
         <div class="empModal-form">
           <label for="contactphone">Phone Number:</label>
-          <input type="number" id="contactphone" name="contactphone" required>
+          <input type="number" id="contactphone" name="contactphone" >
         </div>
         <div class="empModal-form">
           <label for="relationship">Relationship</label>
-          <input type="text" id="relationship" name="relationship" required>
+          <input type="text" id="relationship" name="relationship" >
         </div>
         <div class="empModal-form">
           <label for="notes">Notes:</label>
           <textarea id="notes" name="notes"></textarea>
         </div class="submit">
-          <button type="submit" class="btn1">Submit</button>
+          <button type="submit" class="btn1" onclick="testSubmit()">Submit</button>
         </div>
 
           <div class="buttons">
