Adding uadmin registerInlines

--- a/templates/employee-list.html
+++ b/templates/employee-list.html
@@ -76,7 +76,7 @@
         </div>
         <div class="empModal-form">
             <label for="phone">Phone:</label>
-            <input type="number" id="phone" name="phone"  >
+            <input type="number" id="contactphone" name="contactphone"  >
         </div>
         <div class="empModal-form"> 
             <label for="address">Address:</label>
@@ -124,18 +124,18 @@
           <label for="worksite">Worksite:</label>
           <select id="worksite" name="worksite" >
                <option value="">Select Worksite</option>
-              {{range .Worksite}}
-                <option value="{{.ID}}">{{.Worksite}}</option>
-              {{end}}
+              {{ range .Worksite }}
+                <option value="{{ .ID }}">{{ .Worksite }}</option>
+              {{ end }}
           </select>
         </div>
         <div class="empModal-form">
             <label for="department">Department:</label>
             <select id="department" name="department" >
                 <option value="">Select Department</option>
-                {{range .Department}}
-                  <option value="{{.ID}}">{{.Name}}</option>
-                {{end}}
+                {{ range .Department }}
+                  <option value="{{ .ID }}">{{ .Name }}</option>
+                {{ end }}
             </select>
         </div>
         <div class="empModal-form">
@@ -179,8 +179,8 @@
           <input type="text" id="contactname" name="contactname" >
         </div>
         <div class="empModal-form">
-          <label for="contactphone">Phone Number:</label>
-          <input type="number" id="contactphone" name="contactphone" >
+          <label for="emergencyphone">Phone Number:</label>
+          <input type="number" id="emergencyphone" name="emergencyphone" >
         </div>
         <div class="empModal-form">
           <label for="relationship">Relationship</label>
@@ -281,7 +281,7 @@
       <h2 id="ji">Job Information</h2>
       <div class="jobDetail-info">
         <div class="empDetail-form">
-            <label for="department">Department:</label>
+            <label for="modal-department">Department:</label>
             <p></p>
         </div>
         <div class="empDetail-form">
@@ -313,7 +313,7 @@
           <p></p>
         </div>
         <div class="empDetail-form">
-          <label for="contactphone">Phone Number:</label>
+          <label for="model-contactphone">Phone Number:</label>
           <p></p>
         </div>
         <div class="empDetail-form">
